--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.29.3",
     "@solidjs/router": "^0.12.4",
     "@solidjs/start": "^0.5.9",
     "@vercel/analytics": "^1.2.2",
